configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-example
spec:
  containers:
  - name: envar-demo-container
    image: busybox
