hostPath.yml
# hostpath 경로에 /run/desktop/mnt/host/c/ 붙어야 동작함.
# hostpath 경로에 /run/desktop/mnt/host/c/ 붙어야 동작함.
# hostpath 경로에 /run/desktop/mnt/host/c/ 붙어야 동작함.
# hostpath 경로에 /run/desktop/mnt/host/c/ 붙어야 동작함.
# hostpath 경로에 /run/desktop/mnt/host/c/ 붙어야 동작함.
# hostpath 경로에 /run/desktop/mnt/host/c/ 붙어야 동작함.

apiVersion: v1
kind: Pod
metadata:
  name: po

spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - name: shared-data
      mountPath: /test
  volumes:
  - name: shared-data
    hostPath:
      path: /run/desktop/mnt/host/c/test
      type: DirectoryOrCreate
