namespace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testspace-deploy
  namespace: testspace
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-nginx-pods-label 
  template:
    metadata:
      name: my-nginx-pod
      labels:
        app: my-nginx-pods-label
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
