AIO.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: my-webserver
      labels:
        app: webserver
    spec:
      containers:
      - name: my-webserver
        image: alicek106/rr-test:echo-hostname
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport
spec:
    ports:
    - name: web-port
      port: 8080
      targetPort: 80
    selector:
      app: webserver
    type: NodePort
