svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb
spec:
    ports:
    - name: web-port
      port: 80
      targetPort: 80
    selector:
      app: webserver
    type: LoadBalancer
