svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    release: prometheous
spec:
  ports:
    - name: nginx-port
      port: 80
  selector:
    app: nginx # nginx 디플로이먼트만 바라봄
  type: NodePort
